// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingMessage > fail state > should render fail state 1`] = `
<LoggerProvider
  theme={
    {
      "colors": {
        "background": "#111827",
        "error": "#EF4444",
        "foreground": "#F9FAFB",
        "muted": "#6B7280",
        "primary": "#3B82F6",
        "secondary": "#8B5CF6",
        "success": "#22C55E",
        "warning": "#F59E0B",
      },
      "errorHighlight": {
        "background": "#EF444425",
        "border": "#EF4444",
        "gutterBackground": "#EF444440",
      },
      "file": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "headerBackground": "#3B82F625",
        "headerText": "#F9FAFB",
      },
      "filter": {
        "activeLevel": "#3B82F6",
        "background": "#1F293780",
        "border": "#3B82F6",
        "cursor": "#3B82F6",
        "inactiveLevel": "#4B5563",
        "inputBackground": "#1F2937",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "group": {
        "background": "#6B728010",
        "border": "#6B7280",
        "headerText": "#E5E7EB",
        "icon": "#9CA3AF",
      },
      "header": {
        "background": undefined,
        "border": "#374151",
        "text": "#F9FAFB",
      },
      "help": {
        "background": "#1F2937",
        "border": "#3B82F6",
        "category": "#3B82F6",
        "description": "#E5E7EB",
        "hint": "#6B7280",
        "key": "#F59E0B",
        "title": "#F9FAFB",
      },
      "logLevels": {
        "debug": {
          "background": "#8B5CF615",
          "border": "#8B5CF6",
        },
        "error": {
          "background": "#EF444415",
          "border": "#EF4444",
        },
        "fatal": {
          "background": "#DC262625",
          "border": "#DC2626",
          "text": "#FCA5A5",
        },
        "log": {
          "background": "#3B82F615",
          "border": "#3B82F6",
        },
        "verbose": {
          "background": "#6B728015",
          "border": "#6B7280",
        },
        "warn": {
          "background": "#F59E0B15",
          "border": "#F59E0B",
        },
      },
      "name": "dark",
      "progress": {
        "background": "#3B82F615",
        "barEmpty": "#374151",
        "barFilled": "#3B82F6",
        "border": "#3B82F6",
        "complete": "#22C55E",
        "completeBackground": "#22C55E15",
        "failed": "#EF4444",
        "failedBackground": "#EF444415",
        "text": "#E5E7EB",
        "textDim": "#9CA3AF",
      },
      "prompt": {
        "border": "#374151",
        "buttonBackground": "#374151",
        "buttonSelectedBackground": "#1F2937",
        "cancelButton": "#EF4444",
        "confirmButton": "#22C55E",
        "focusBorder": "#3B82F6",
        "inputBackground": "#1F2937",
        "inputBorder": "#3B82F6",
        "inputCursor": "#3B82F6",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "optionSelected": "#3B82F6",
        "optionSelectedBackground": "#1E3A5F",
        "optionText": "#E5E7EB",
        "optionTextDim": "#9CA3AF",
        "question": "#F9FAFB",
      },
      "separator": {
        "line": "#374151",
        "text": "#6B7280",
      },
      "sidebar": {
        "background": undefined,
        "badge": "#3B82F6",
        "border": "#374151",
        "focusBorder": "#3B82F6",
        "hoverBackground": "#374151",
        "selectedBackground": "#1F293780",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "statusIndicators": {
        "fail": {
          "color": "#EF4444",
          "icon": "✗",
        },
        "pending": {
          "color": "#F59E0B",
          "icon": "◐",
        },
        "static": {
          "color": "#3B82F6",
          "icon": "●",
        },
        "success": {
          "color": "#22C55E",
          "icon": "✓",
        },
        "waiting": {
          "color": "#6B7280",
          "icon": "○",
        },
      },
      "table": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "cellText": "#E5E7EB",
        "headerText": "#F9FAFB",
        "separator": "#3B82F650",
        "title": "#F9FAFB",
      },
    }
  }
>
  <LoadingMessage
    message={
      {
        "content": "Loading...",
        "id": "loading-6",
        "resolvedContent": "Failed to load data",
        "status": "fail",
        "timestamp": 2025-01-01T00:00:00.000Z,
        "type": "loading",
      }
    }
  />
</LoggerProvider>
`;

exports[`LoadingMessage > fail state > should show error message when failed 1`] = `
<LoggerProvider
  theme={
    {
      "colors": {
        "background": "#111827",
        "error": "#EF4444",
        "foreground": "#F9FAFB",
        "muted": "#6B7280",
        "primary": "#3B82F6",
        "secondary": "#8B5CF6",
        "success": "#22C55E",
        "warning": "#F59E0B",
      },
      "errorHighlight": {
        "background": "#EF444425",
        "border": "#EF4444",
        "gutterBackground": "#EF444440",
      },
      "file": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "headerBackground": "#3B82F625",
        "headerText": "#F9FAFB",
      },
      "filter": {
        "activeLevel": "#3B82F6",
        "background": "#1F293780",
        "border": "#3B82F6",
        "cursor": "#3B82F6",
        "inactiveLevel": "#4B5563",
        "inputBackground": "#1F2937",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "group": {
        "background": "#6B728010",
        "border": "#6B7280",
        "headerText": "#E5E7EB",
        "icon": "#9CA3AF",
      },
      "header": {
        "background": undefined,
        "border": "#374151",
        "text": "#F9FAFB",
      },
      "help": {
        "background": "#1F2937",
        "border": "#3B82F6",
        "category": "#3B82F6",
        "description": "#E5E7EB",
        "hint": "#6B7280",
        "key": "#F59E0B",
        "title": "#F9FAFB",
      },
      "logLevels": {
        "debug": {
          "background": "#8B5CF615",
          "border": "#8B5CF6",
        },
        "error": {
          "background": "#EF444415",
          "border": "#EF4444",
        },
        "fatal": {
          "background": "#DC262625",
          "border": "#DC2626",
          "text": "#FCA5A5",
        },
        "log": {
          "background": "#3B82F615",
          "border": "#3B82F6",
        },
        "verbose": {
          "background": "#6B728015",
          "border": "#6B7280",
        },
        "warn": {
          "background": "#F59E0B15",
          "border": "#F59E0B",
        },
      },
      "name": "dark",
      "progress": {
        "background": "#3B82F615",
        "barEmpty": "#374151",
        "barFilled": "#3B82F6",
        "border": "#3B82F6",
        "complete": "#22C55E",
        "completeBackground": "#22C55E15",
        "failed": "#EF4444",
        "failedBackground": "#EF444415",
        "text": "#E5E7EB",
        "textDim": "#9CA3AF",
      },
      "prompt": {
        "border": "#374151",
        "buttonBackground": "#374151",
        "buttonSelectedBackground": "#1F2937",
        "cancelButton": "#EF4444",
        "confirmButton": "#22C55E",
        "focusBorder": "#3B82F6",
        "inputBackground": "#1F2937",
        "inputBorder": "#3B82F6",
        "inputCursor": "#3B82F6",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "optionSelected": "#3B82F6",
        "optionSelectedBackground": "#1E3A5F",
        "optionText": "#E5E7EB",
        "optionTextDim": "#9CA3AF",
        "question": "#F9FAFB",
      },
      "separator": {
        "line": "#374151",
        "text": "#6B7280",
      },
      "sidebar": {
        "background": undefined,
        "badge": "#3B82F6",
        "border": "#374151",
        "focusBorder": "#3B82F6",
        "hoverBackground": "#374151",
        "selectedBackground": "#1F293780",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "statusIndicators": {
        "fail": {
          "color": "#EF4444",
          "icon": "✗",
        },
        "pending": {
          "color": "#F59E0B",
          "icon": "◐",
        },
        "static": {
          "color": "#3B82F6",
          "icon": "●",
        },
        "success": {
          "color": "#22C55E",
          "icon": "✓",
        },
        "waiting": {
          "color": "#6B7280",
          "icon": "○",
        },
      },
      "table": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "cellText": "#E5E7EB",
        "headerText": "#F9FAFB",
        "separator": "#3B82F650",
        "title": "#F9FAFB",
      },
    }
  }
>
  <LoadingMessage
    message={
      {
        "content": "Connecting to server...",
        "id": "loading-7",
        "resolvedContent": "Connection timeout",
        "status": "fail",
        "timestamp": 2025-01-01T00:00:00.000Z,
        "type": "loading",
      }
    }
  />
</LoggerProvider>
`;

exports[`LoadingMessage > loading state > should render loading state 1`] = `
<LoggerProvider
  theme={
    {
      "colors": {
        "background": "#111827",
        "error": "#EF4444",
        "foreground": "#F9FAFB",
        "muted": "#6B7280",
        "primary": "#3B82F6",
        "secondary": "#8B5CF6",
        "success": "#22C55E",
        "warning": "#F59E0B",
      },
      "errorHighlight": {
        "background": "#EF444425",
        "border": "#EF4444",
        "gutterBackground": "#EF444440",
      },
      "file": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "headerBackground": "#3B82F625",
        "headerText": "#F9FAFB",
      },
      "filter": {
        "activeLevel": "#3B82F6",
        "background": "#1F293780",
        "border": "#3B82F6",
        "cursor": "#3B82F6",
        "inactiveLevel": "#4B5563",
        "inputBackground": "#1F2937",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "group": {
        "background": "#6B728010",
        "border": "#6B7280",
        "headerText": "#E5E7EB",
        "icon": "#9CA3AF",
      },
      "header": {
        "background": undefined,
        "border": "#374151",
        "text": "#F9FAFB",
      },
      "help": {
        "background": "#1F2937",
        "border": "#3B82F6",
        "category": "#3B82F6",
        "description": "#E5E7EB",
        "hint": "#6B7280",
        "key": "#F59E0B",
        "title": "#F9FAFB",
      },
      "logLevels": {
        "debug": {
          "background": "#8B5CF615",
          "border": "#8B5CF6",
        },
        "error": {
          "background": "#EF444415",
          "border": "#EF4444",
        },
        "fatal": {
          "background": "#DC262625",
          "border": "#DC2626",
          "text": "#FCA5A5",
        },
        "log": {
          "background": "#3B82F615",
          "border": "#3B82F6",
        },
        "verbose": {
          "background": "#6B728015",
          "border": "#6B7280",
        },
        "warn": {
          "background": "#F59E0B15",
          "border": "#F59E0B",
        },
      },
      "name": "dark",
      "progress": {
        "background": "#3B82F615",
        "barEmpty": "#374151",
        "barFilled": "#3B82F6",
        "border": "#3B82F6",
        "complete": "#22C55E",
        "completeBackground": "#22C55E15",
        "failed": "#EF4444",
        "failedBackground": "#EF444415",
        "text": "#E5E7EB",
        "textDim": "#9CA3AF",
      },
      "prompt": {
        "border": "#374151",
        "buttonBackground": "#374151",
        "buttonSelectedBackground": "#1F2937",
        "cancelButton": "#EF4444",
        "confirmButton": "#22C55E",
        "focusBorder": "#3B82F6",
        "inputBackground": "#1F2937",
        "inputBorder": "#3B82F6",
        "inputCursor": "#3B82F6",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "optionSelected": "#3B82F6",
        "optionSelectedBackground": "#1E3A5F",
        "optionText": "#E5E7EB",
        "optionTextDim": "#9CA3AF",
        "question": "#F9FAFB",
      },
      "separator": {
        "line": "#374151",
        "text": "#6B7280",
      },
      "sidebar": {
        "background": undefined,
        "badge": "#3B82F6",
        "border": "#374151",
        "focusBorder": "#3B82F6",
        "hoverBackground": "#374151",
        "selectedBackground": "#1F293780",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "statusIndicators": {
        "fail": {
          "color": "#EF4444",
          "icon": "✗",
        },
        "pending": {
          "color": "#F59E0B",
          "icon": "◐",
        },
        "static": {
          "color": "#3B82F6",
          "icon": "●",
        },
        "success": {
          "color": "#22C55E",
          "icon": "✓",
        },
        "waiting": {
          "color": "#6B7280",
          "icon": "○",
        },
      },
      "table": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "cellText": "#E5E7EB",
        "headerText": "#F9FAFB",
        "separator": "#3B82F650",
        "title": "#F9FAFB",
      },
    }
  }
>
  <LoadingMessage
    message={
      {
        "content": "Loading data...",
        "id": "loading-1",
        "status": "loading",
        "timestamp": 2025-01-01T00:00:00.000Z,
        "type": "loading",
      }
    }
  />
</LoggerProvider>
`;

exports[`LoadingMessage > loading state > should render loading with custom content 1`] = `
<LoggerProvider
  theme={
    {
      "colors": {
        "background": "#111827",
        "error": "#EF4444",
        "foreground": "#F9FAFB",
        "muted": "#6B7280",
        "primary": "#3B82F6",
        "secondary": "#8B5CF6",
        "success": "#22C55E",
        "warning": "#F59E0B",
      },
      "errorHighlight": {
        "background": "#EF444425",
        "border": "#EF4444",
        "gutterBackground": "#EF444440",
      },
      "file": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "headerBackground": "#3B82F625",
        "headerText": "#F9FAFB",
      },
      "filter": {
        "activeLevel": "#3B82F6",
        "background": "#1F293780",
        "border": "#3B82F6",
        "cursor": "#3B82F6",
        "inactiveLevel": "#4B5563",
        "inputBackground": "#1F2937",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "group": {
        "background": "#6B728010",
        "border": "#6B7280",
        "headerText": "#E5E7EB",
        "icon": "#9CA3AF",
      },
      "header": {
        "background": undefined,
        "border": "#374151",
        "text": "#F9FAFB",
      },
      "help": {
        "background": "#1F2937",
        "border": "#3B82F6",
        "category": "#3B82F6",
        "description": "#E5E7EB",
        "hint": "#6B7280",
        "key": "#F59E0B",
        "title": "#F9FAFB",
      },
      "logLevels": {
        "debug": {
          "background": "#8B5CF615",
          "border": "#8B5CF6",
        },
        "error": {
          "background": "#EF444415",
          "border": "#EF4444",
        },
        "fatal": {
          "background": "#DC262625",
          "border": "#DC2626",
          "text": "#FCA5A5",
        },
        "log": {
          "background": "#3B82F615",
          "border": "#3B82F6",
        },
        "verbose": {
          "background": "#6B728015",
          "border": "#6B7280",
        },
        "warn": {
          "background": "#F59E0B15",
          "border": "#F59E0B",
        },
      },
      "name": "dark",
      "progress": {
        "background": "#3B82F615",
        "barEmpty": "#374151",
        "barFilled": "#3B82F6",
        "border": "#3B82F6",
        "complete": "#22C55E",
        "completeBackground": "#22C55E15",
        "failed": "#EF4444",
        "failedBackground": "#EF444415",
        "text": "#E5E7EB",
        "textDim": "#9CA3AF",
      },
      "prompt": {
        "border": "#374151",
        "buttonBackground": "#374151",
        "buttonSelectedBackground": "#1F2937",
        "cancelButton": "#EF4444",
        "confirmButton": "#22C55E",
        "focusBorder": "#3B82F6",
        "inputBackground": "#1F2937",
        "inputBorder": "#3B82F6",
        "inputCursor": "#3B82F6",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "optionSelected": "#3B82F6",
        "optionSelectedBackground": "#1E3A5F",
        "optionText": "#E5E7EB",
        "optionTextDim": "#9CA3AF",
        "question": "#F9FAFB",
      },
      "separator": {
        "line": "#374151",
        "text": "#6B7280",
      },
      "sidebar": {
        "background": undefined,
        "badge": "#3B82F6",
        "border": "#374151",
        "focusBorder": "#3B82F6",
        "hoverBackground": "#374151",
        "selectedBackground": "#1F293780",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "statusIndicators": {
        "fail": {
          "color": "#EF4444",
          "icon": "✗",
        },
        "pending": {
          "color": "#F59E0B",
          "icon": "◐",
        },
        "static": {
          "color": "#3B82F6",
          "icon": "●",
        },
        "success": {
          "color": "#22C55E",
          "icon": "✓",
        },
        "waiting": {
          "color": "#6B7280",
          "icon": "○",
        },
      },
      "table": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "cellText": "#E5E7EB",
        "headerText": "#F9FAFB",
        "separator": "#3B82F650",
        "title": "#F9FAFB",
      },
    }
  }
>
  <LoadingMessage
    message={
      {
        "content": "Fetching user information...",
        "id": "loading-2",
        "status": "loading",
        "timestamp": 2025-01-01T00:00:00.000Z,
        "type": "loading",
      }
    }
  />
</LoggerProvider>
`;

exports[`LoadingMessage > success state > should fall back to original content if no resolvedContent 1`] = `
<LoggerProvider
  theme={
    {
      "colors": {
        "background": "#111827",
        "error": "#EF4444",
        "foreground": "#F9FAFB",
        "muted": "#6B7280",
        "primary": "#3B82F6",
        "secondary": "#8B5CF6",
        "success": "#22C55E",
        "warning": "#F59E0B",
      },
      "errorHighlight": {
        "background": "#EF444425",
        "border": "#EF4444",
        "gutterBackground": "#EF444440",
      },
      "file": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "headerBackground": "#3B82F625",
        "headerText": "#F9FAFB",
      },
      "filter": {
        "activeLevel": "#3B82F6",
        "background": "#1F293780",
        "border": "#3B82F6",
        "cursor": "#3B82F6",
        "inactiveLevel": "#4B5563",
        "inputBackground": "#1F2937",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "group": {
        "background": "#6B728010",
        "border": "#6B7280",
        "headerText": "#E5E7EB",
        "icon": "#9CA3AF",
      },
      "header": {
        "background": undefined,
        "border": "#374151",
        "text": "#F9FAFB",
      },
      "help": {
        "background": "#1F2937",
        "border": "#3B82F6",
        "category": "#3B82F6",
        "description": "#E5E7EB",
        "hint": "#6B7280",
        "key": "#F59E0B",
        "title": "#F9FAFB",
      },
      "logLevels": {
        "debug": {
          "background": "#8B5CF615",
          "border": "#8B5CF6",
        },
        "error": {
          "background": "#EF444415",
          "border": "#EF4444",
        },
        "fatal": {
          "background": "#DC262625",
          "border": "#DC2626",
          "text": "#FCA5A5",
        },
        "log": {
          "background": "#3B82F615",
          "border": "#3B82F6",
        },
        "verbose": {
          "background": "#6B728015",
          "border": "#6B7280",
        },
        "warn": {
          "background": "#F59E0B15",
          "border": "#F59E0B",
        },
      },
      "name": "dark",
      "progress": {
        "background": "#3B82F615",
        "barEmpty": "#374151",
        "barFilled": "#3B82F6",
        "border": "#3B82F6",
        "complete": "#22C55E",
        "completeBackground": "#22C55E15",
        "failed": "#EF4444",
        "failedBackground": "#EF444415",
        "text": "#E5E7EB",
        "textDim": "#9CA3AF",
      },
      "prompt": {
        "border": "#374151",
        "buttonBackground": "#374151",
        "buttonSelectedBackground": "#1F2937",
        "cancelButton": "#EF4444",
        "confirmButton": "#22C55E",
        "focusBorder": "#3B82F6",
        "inputBackground": "#1F2937",
        "inputBorder": "#3B82F6",
        "inputCursor": "#3B82F6",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "optionSelected": "#3B82F6",
        "optionSelectedBackground": "#1E3A5F",
        "optionText": "#E5E7EB",
        "optionTextDim": "#9CA3AF",
        "question": "#F9FAFB",
      },
      "separator": {
        "line": "#374151",
        "text": "#6B7280",
      },
      "sidebar": {
        "background": undefined,
        "badge": "#3B82F6",
        "border": "#374151",
        "focusBorder": "#3B82F6",
        "hoverBackground": "#374151",
        "selectedBackground": "#1F293780",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "statusIndicators": {
        "fail": {
          "color": "#EF4444",
          "icon": "✗",
        },
        "pending": {
          "color": "#F59E0B",
          "icon": "◐",
        },
        "static": {
          "color": "#3B82F6",
          "icon": "●",
        },
        "success": {
          "color": "#22C55E",
          "icon": "✓",
        },
        "waiting": {
          "color": "#6B7280",
          "icon": "○",
        },
      },
      "table": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "cellText": "#E5E7EB",
        "headerText": "#F9FAFB",
        "separator": "#3B82F650",
        "title": "#F9FAFB",
      },
    }
  }
>
  <LoadingMessage
    message={
      {
        "content": "Loading completed",
        "id": "loading-5",
        "resolvedContent": undefined,
        "status": "success",
        "timestamp": 2025-01-01T00:00:00.000Z,
        "type": "loading",
      }
    }
  />
</LoggerProvider>
`;

exports[`LoadingMessage > success state > should render success state 1`] = `
<LoggerProvider
  theme={
    {
      "colors": {
        "background": "#111827",
        "error": "#EF4444",
        "foreground": "#F9FAFB",
        "muted": "#6B7280",
        "primary": "#3B82F6",
        "secondary": "#8B5CF6",
        "success": "#22C55E",
        "warning": "#F59E0B",
      },
      "errorHighlight": {
        "background": "#EF444425",
        "border": "#EF4444",
        "gutterBackground": "#EF444440",
      },
      "file": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "headerBackground": "#3B82F625",
        "headerText": "#F9FAFB",
      },
      "filter": {
        "activeLevel": "#3B82F6",
        "background": "#1F293780",
        "border": "#3B82F6",
        "cursor": "#3B82F6",
        "inactiveLevel": "#4B5563",
        "inputBackground": "#1F2937",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "group": {
        "background": "#6B728010",
        "border": "#6B7280",
        "headerText": "#E5E7EB",
        "icon": "#9CA3AF",
      },
      "header": {
        "background": undefined,
        "border": "#374151",
        "text": "#F9FAFB",
      },
      "help": {
        "background": "#1F2937",
        "border": "#3B82F6",
        "category": "#3B82F6",
        "description": "#E5E7EB",
        "hint": "#6B7280",
        "key": "#F59E0B",
        "title": "#F9FAFB",
      },
      "logLevels": {
        "debug": {
          "background": "#8B5CF615",
          "border": "#8B5CF6",
        },
        "error": {
          "background": "#EF444415",
          "border": "#EF4444",
        },
        "fatal": {
          "background": "#DC262625",
          "border": "#DC2626",
          "text": "#FCA5A5",
        },
        "log": {
          "background": "#3B82F615",
          "border": "#3B82F6",
        },
        "verbose": {
          "background": "#6B728015",
          "border": "#6B7280",
        },
        "warn": {
          "background": "#F59E0B15",
          "border": "#F59E0B",
        },
      },
      "name": "dark",
      "progress": {
        "background": "#3B82F615",
        "barEmpty": "#374151",
        "barFilled": "#3B82F6",
        "border": "#3B82F6",
        "complete": "#22C55E",
        "completeBackground": "#22C55E15",
        "failed": "#EF4444",
        "failedBackground": "#EF444415",
        "text": "#E5E7EB",
        "textDim": "#9CA3AF",
      },
      "prompt": {
        "border": "#374151",
        "buttonBackground": "#374151",
        "buttonSelectedBackground": "#1F2937",
        "cancelButton": "#EF4444",
        "confirmButton": "#22C55E",
        "focusBorder": "#3B82F6",
        "inputBackground": "#1F2937",
        "inputBorder": "#3B82F6",
        "inputCursor": "#3B82F6",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "optionSelected": "#3B82F6",
        "optionSelectedBackground": "#1E3A5F",
        "optionText": "#E5E7EB",
        "optionTextDim": "#9CA3AF",
        "question": "#F9FAFB",
      },
      "separator": {
        "line": "#374151",
        "text": "#6B7280",
      },
      "sidebar": {
        "background": undefined,
        "badge": "#3B82F6",
        "border": "#374151",
        "focusBorder": "#3B82F6",
        "hoverBackground": "#374151",
        "selectedBackground": "#1F293780",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "statusIndicators": {
        "fail": {
          "color": "#EF4444",
          "icon": "✗",
        },
        "pending": {
          "color": "#F59E0B",
          "icon": "◐",
        },
        "static": {
          "color": "#3B82F6",
          "icon": "●",
        },
        "success": {
          "color": "#22C55E",
          "icon": "✓",
        },
        "waiting": {
          "color": "#6B7280",
          "icon": "○",
        },
      },
      "table": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "cellText": "#E5E7EB",
        "headerText": "#F9FAFB",
        "separator": "#3B82F650",
        "title": "#F9FAFB",
      },
    }
  }
>
  <LoadingMessage
    message={
      {
        "content": "Loading...",
        "id": "loading-3",
        "resolvedContent": "Successfully loaded!",
        "status": "success",
        "timestamp": 2025-01-01T00:00:00.000Z,
        "type": "loading",
      }
    }
  />
</LoggerProvider>
`;

exports[`LoadingMessage > success state > should show resolved content when success 1`] = `
<LoggerProvider
  theme={
    {
      "colors": {
        "background": "#111827",
        "error": "#EF4444",
        "foreground": "#F9FAFB",
        "muted": "#6B7280",
        "primary": "#3B82F6",
        "secondary": "#8B5CF6",
        "success": "#22C55E",
        "warning": "#F59E0B",
      },
      "errorHighlight": {
        "background": "#EF444425",
        "border": "#EF4444",
        "gutterBackground": "#EF444440",
      },
      "file": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "headerBackground": "#3B82F625",
        "headerText": "#F9FAFB",
      },
      "filter": {
        "activeLevel": "#3B82F6",
        "background": "#1F293780",
        "border": "#3B82F6",
        "cursor": "#3B82F6",
        "inactiveLevel": "#4B5563",
        "inputBackground": "#1F2937",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "group": {
        "background": "#6B728010",
        "border": "#6B7280",
        "headerText": "#E5E7EB",
        "icon": "#9CA3AF",
      },
      "header": {
        "background": undefined,
        "border": "#374151",
        "text": "#F9FAFB",
      },
      "help": {
        "background": "#1F2937",
        "border": "#3B82F6",
        "category": "#3B82F6",
        "description": "#E5E7EB",
        "hint": "#6B7280",
        "key": "#F59E0B",
        "title": "#F9FAFB",
      },
      "logLevels": {
        "debug": {
          "background": "#8B5CF615",
          "border": "#8B5CF6",
        },
        "error": {
          "background": "#EF444415",
          "border": "#EF4444",
        },
        "fatal": {
          "background": "#DC262625",
          "border": "#DC2626",
          "text": "#FCA5A5",
        },
        "log": {
          "background": "#3B82F615",
          "border": "#3B82F6",
        },
        "verbose": {
          "background": "#6B728015",
          "border": "#6B7280",
        },
        "warn": {
          "background": "#F59E0B15",
          "border": "#F59E0B",
        },
      },
      "name": "dark",
      "progress": {
        "background": "#3B82F615",
        "barEmpty": "#374151",
        "barFilled": "#3B82F6",
        "border": "#3B82F6",
        "complete": "#22C55E",
        "completeBackground": "#22C55E15",
        "failed": "#EF4444",
        "failedBackground": "#EF444415",
        "text": "#E5E7EB",
        "textDim": "#9CA3AF",
      },
      "prompt": {
        "border": "#374151",
        "buttonBackground": "#374151",
        "buttonSelectedBackground": "#1F2937",
        "cancelButton": "#EF4444",
        "confirmButton": "#22C55E",
        "focusBorder": "#3B82F6",
        "inputBackground": "#1F2937",
        "inputBorder": "#3B82F6",
        "inputCursor": "#3B82F6",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "optionSelected": "#3B82F6",
        "optionSelectedBackground": "#1E3A5F",
        "optionText": "#E5E7EB",
        "optionTextDim": "#9CA3AF",
        "question": "#F9FAFB",
      },
      "separator": {
        "line": "#374151",
        "text": "#6B7280",
      },
      "sidebar": {
        "background": undefined,
        "badge": "#3B82F6",
        "border": "#374151",
        "focusBorder": "#3B82F6",
        "hoverBackground": "#374151",
        "selectedBackground": "#1F293780",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "statusIndicators": {
        "fail": {
          "color": "#EF4444",
          "icon": "✗",
        },
        "pending": {
          "color": "#F59E0B",
          "icon": "◐",
        },
        "static": {
          "color": "#3B82F6",
          "icon": "●",
        },
        "success": {
          "color": "#22C55E",
          "icon": "✓",
        },
        "waiting": {
          "color": "#6B7280",
          "icon": "○",
        },
      },
      "table": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "cellText": "#E5E7EB",
        "headerText": "#F9FAFB",
        "separator": "#3B82F650",
        "title": "#F9FAFB",
      },
    }
  }
>
  <LoadingMessage
    message={
      {
        "content": "Original loading message",
        "id": "loading-4",
        "resolvedContent": "Operation completed successfully",
        "status": "success",
        "timestamp": 2025-01-01T00:00:00.000Z,
        "type": "loading",
      }
    }
  />
</LoggerProvider>
`;

exports[`LoadingMessage > with timestamp > should include timestamp in all states 1`] = `
<LoggerProvider
  theme={
    {
      "colors": {
        "background": "#111827",
        "error": "#EF4444",
        "foreground": "#F9FAFB",
        "muted": "#6B7280",
        "primary": "#3B82F6",
        "secondary": "#8B5CF6",
        "success": "#22C55E",
        "warning": "#F59E0B",
      },
      "errorHighlight": {
        "background": "#EF444425",
        "border": "#EF4444",
        "gutterBackground": "#EF444440",
      },
      "file": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "headerBackground": "#3B82F625",
        "headerText": "#F9FAFB",
      },
      "filter": {
        "activeLevel": "#3B82F6",
        "background": "#1F293780",
        "border": "#3B82F6",
        "cursor": "#3B82F6",
        "inactiveLevel": "#4B5563",
        "inputBackground": "#1F2937",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "group": {
        "background": "#6B728010",
        "border": "#6B7280",
        "headerText": "#E5E7EB",
        "icon": "#9CA3AF",
      },
      "header": {
        "background": undefined,
        "border": "#374151",
        "text": "#F9FAFB",
      },
      "help": {
        "background": "#1F2937",
        "border": "#3B82F6",
        "category": "#3B82F6",
        "description": "#E5E7EB",
        "hint": "#6B7280",
        "key": "#F59E0B",
        "title": "#F9FAFB",
      },
      "logLevels": {
        "debug": {
          "background": "#8B5CF615",
          "border": "#8B5CF6",
        },
        "error": {
          "background": "#EF444415",
          "border": "#EF4444",
        },
        "fatal": {
          "background": "#DC262625",
          "border": "#DC2626",
          "text": "#FCA5A5",
        },
        "log": {
          "background": "#3B82F615",
          "border": "#3B82F6",
        },
        "verbose": {
          "background": "#6B728015",
          "border": "#6B7280",
        },
        "warn": {
          "background": "#F59E0B15",
          "border": "#F59E0B",
        },
      },
      "name": "dark",
      "progress": {
        "background": "#3B82F615",
        "barEmpty": "#374151",
        "barFilled": "#3B82F6",
        "border": "#3B82F6",
        "complete": "#22C55E",
        "completeBackground": "#22C55E15",
        "failed": "#EF4444",
        "failedBackground": "#EF444415",
        "text": "#E5E7EB",
        "textDim": "#9CA3AF",
      },
      "prompt": {
        "border": "#374151",
        "buttonBackground": "#374151",
        "buttonSelectedBackground": "#1F2937",
        "cancelButton": "#EF4444",
        "confirmButton": "#22C55E",
        "focusBorder": "#3B82F6",
        "inputBackground": "#1F2937",
        "inputBorder": "#3B82F6",
        "inputCursor": "#3B82F6",
        "inputPlaceholder": "#6B7280",
        "inputText": "#F9FAFB",
        "optionSelected": "#3B82F6",
        "optionSelectedBackground": "#1E3A5F",
        "optionText": "#E5E7EB",
        "optionTextDim": "#9CA3AF",
        "question": "#F9FAFB",
      },
      "separator": {
        "line": "#374151",
        "text": "#6B7280",
      },
      "sidebar": {
        "background": undefined,
        "badge": "#3B82F6",
        "border": "#374151",
        "focusBorder": "#3B82F6",
        "hoverBackground": "#374151",
        "selectedBackground": "#1F293780",
        "text": "#E5E7EB",
        "textDim": "#6B7280",
      },
      "statusIndicators": {
        "fail": {
          "color": "#EF4444",
          "icon": "✗",
        },
        "pending": {
          "color": "#F59E0B",
          "icon": "◐",
        },
        "static": {
          "color": "#3B82F6",
          "icon": "●",
        },
        "success": {
          "color": "#22C55E",
          "icon": "✓",
        },
        "waiting": {
          "color": "#6B7280",
          "icon": "○",
        },
      },
      "table": {
        "background": "#3B82F615",
        "border": "#3B82F6",
        "cellText": "#E5E7EB",
        "headerText": "#F9FAFB",
        "separator": "#3B82F650",
        "title": "#F9FAFB",
      },
    }
  }
>
  <LoadingMessage
    message={
      {
        "content": "Loading...",
        "id": "loading-8",
        "status": "loading",
        "timestamp": 2024-01-15T10:30:00.000Z,
        "type": "loading",
      }
    }
  />
</LoggerProvider>
`;
